--- a/ribbit/ribbit/templates/buddies.html
+++ b/ribbit/ribbit/templates/buddies.html
@@ -1,71 +1,57 @@
-{% extends "base.html" %}
-{% block login %}
-<<<<<<< HEAD
-	{% with user.username as username %}
-		{{block.super}}
-	{% endwith %}
-{% endblock %}
-{% block content %}
-	<div class="panel right">
-		<h1>Crear Ribbit</h1>
-		<p>
-			<form action='/submit' method='post'>
-				{% for field in ribbit_form %}{% csrf_token %}
-					{{field}}
-				{% endfor %}
-			<input type='hidden' value='{{next_url}}' name='next_url'>
-			<input type='submit' value='Postear!'>
-			</form>
-		</p>
-	</div>
-	<div class='panel left'>
-		<h1>Ribbits</h1>
-		{% for ribbit in ribbits %}
-		<div class='ribbitWrapper'>
-			<a href="/users/{{ribbit.user.username}}">
-				<img class="avatar" src="{{ribbit.user.profile.gravatar_url}}"></img>
-				<span class="name">{{ribbit.user.first_name}}</span>
-			</a>
-			@{{ribbit.user.username}}
-			<p>
-				{{ribbit.content}}
-			</p>	
-		</div>
-		{% endfor %}
-	</div>
-=======
-    {% with user.username as username %}
-        {{ block.super }}
-    {% endwith %}
-{% endblock %}
-
-{% block content %}
-    <div class="panel right">
-        <h1>Create a Ribbit</h1>
-        <p>
-            <form action="/submit" method="post">
-            {% for field in ribbit_form %}{% csrf_token %}
-            {{ field }}
-            {% endfor %}
-            <input type="hidden" value="{{ next_url }}" name="next_url">
-            <input type="submit" value="Ribbit!">
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet/less" href="{{ STATIC_URL }}style.less">
+    <script src="{{ STATIC_URL }}less.js"></script>
+</head>
+<body>
+    <header>
+        <div class="wrapper">
+            <img src="{{ STATIC_URL }}gfx/logo.png">
+            <span>Twitter Clone</span>
+            {% block login %}
+            <a href="/">Home</a>
+            <a href="/users/">Public Profiles</a>
+            <a href="/users/{{ username }}">My Profile</a>
+            <a href="/ribbits">Public Ribbits</a>
+            <form action="/logout">
+                <input type="submit" id="btnLogOut" value="Log Out">
             </form>
-        </p>
-    </div>
-    <div class="panel left">
-        <h1>Buddies' Ribbits</h1>
-        {% for ribbit in ribbits %}
-        <div class="ribbitWrapper">
-            <a href="/users/{{ ribbit.user.username }}">
-                <img class="avatar" src="{{ ribbit.user.profile.gravatar_url }}">
-                <span class="name">{{ ribbit.user.first_name }}</span>
-            </a>
-            @{{ ribbit.user.username }}
-            <p>
-                {{ ribbit.content }}
-            </p>
+            {% endblock %}
         </div>
-        {% endfor %}
+    </header>
+    <div id="content">
+        <div class="wrapper">
+            {% block flash %}
+            {% if auth_form.non_field_errors or user_form.non_field_errors or ribbit_form.errors %}
+            <div class="flash error">
+                {{ auth_form.non_field_errors }}
+                {{ user_form.non_field_errors }}
+                {{ ribbit_form.content.errors }}
+            </div>
+            {% endif %}
+            {% if notice %}
+            <div class="flash notice">
+                {{ notice }}
+            </div>
+            {% endif %}
+            {% endblock %}
+
+            {% block content %}
+
+            {% endblock %}
+        </div>
     </div>
->>>>>>> 8991acd7d362175709df18365c47d25a648daa44
-{% endblock %}
+    <footer>
+        <div class="wrapper">
+            Ribbit - A Twitter Clone Tutorial
+            <a href="http://net.tutsplus.com">
+                <img src="{{ STATIC_URL }}gfx/logo-nettuts.png">
+            </a>
+            <a href="http://www.djangoproject.com/">
+                <img src="https://www.djangoproject.com/m/img/badges/djangomade124x25.gif" border="0" alt="Made with Django." title="Made with Django." />
+            </a>
+        </div>
+    </footer>
+</body>
+</html>
